# soltag

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  vercel.json
api/: .env.example  package-lock.json  package.json
api/src/: index.ts
programs/alias-registry/: Cargo.toml
programs/alias-registry/src/: lib.rs
tests/: alias-registry.ts
web/: .env.example  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  vite-env.d.ts
