[package]
name = "alias-registry"
version = "0.1.0"
description = "Solana Wallet Alias Registry - @handles for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alias_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
